- uncomment code re: PolyPhen and SIFT - add PolyPhen and SIFT to suggests
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_9/madman/Rpacks/VariantAnnotation@60013 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/VariantAnnotation.Rnw
+++ b/inst/doc/VariantAnnotation.Rnw
@@ -321,7 +321,7 @@ databases and made available through the \Rcode{Bioconductor} packages
 \Rpackage{SIFT.Hsapiens.dbSNP132.db} and \Rpackage{PolyPhen.Hapiens.dbSNP131.db}.
 The packages are designed to be serached by rsid.
 
-<<SIFT_and_PP, eval=FALSE>>=
+<<SIFT_and_PP>>=
 library(SIFT.Hsapiens.dbSNP132)
 library(PolyPhen.Hsapiens.dbSNP131)
 
