minor format edits
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_9/madman/Rpacks/VariantAnnotation@60347 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/VariantAnnotation.Rnw
+++ b/inst/doc/VariantAnnotation.Rnw
@@ -311,7 +311,7 @@ exptData(vcf)[["HEADER"]][["META"]]
 
 The eight required fields of the VCF file are parsed into a \Rcode{GRanges}
 object in the \Rcode{rowData} slot. The \Rcode{ALT} alleles are provided as 
-a \Rcode{DNAStringSetList} to accomodate for multiple values per variant. 
+a \Rcode{DataFrameList} to accomodate for multiple values per variant. 
 All fields in the \Rcode{INFO} column are parsed into individual elementMetadata 
 columns.
 
