- sort the output from locateVariants() by queryID, txID, ... - remove 'exbytx' input to refLocsToLocalLocs() - modify length of 'refSeq' in predictCoding()
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_10/madman/Rpacks/VariantAnnotation@64786 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -13,13 +13,14 @@ NEW FEATURES
 
     o locateVariants() 
         - returns GRanges instead of DataFrame
+        - 'region' argument allows specification of variants by region 
         - output includes txID, geneID and cdsID
         - has cache argument for repeated calls over multiple vcf files
 
     o predictCoding()
         - returns GRanges instead of DataFrame
         - output includes txID, geneID, cdsID, 
-          cDNA-based, cds-based and protein-based coordinates
+          cds-based and protein-based coordinates
  
 
 CHANGES IN VERSION 1.0.0
