--- a/inst/doc/VariantAnnotation.Rnw
+++ b/inst/doc/VariantAnnotation.Rnw
@@ -419,7 +419,7 @@ not specified.
 \begin{center}
 \begin{tabular}{l|l|l|l|l|c}
 \hline
-Type & refAllele & varAllele & refSeq & varSeq & translation possible \\
+Type & refAllele & varAllele & refCodon & varCodon & translation possible \\
 \hline
 substitution & G & T & aag & aaT & yes\\
 substitution & G & TG & tga & tTGa & no\\
@@ -446,17 +446,18 @@ head(coding, 4)
 @
 
 Using variant 22:50301494 as an example, we see varAllele \Rcode{A} has been 
-sustituted into the refSeq \Rcode{CAC} to produce varSeq \Rcode{CAA}. The
-refSeq is the sequence of codons necessary to make the variant allele
-substitution and therefore often includes more nucleotides than present in
-the range (i.e., 50301494, 50301494). Notice that it is the third position 
-in the refSeq that has been substituted. This third position in the codon,
-the position of substitution, corresponds to genomic position 50301494. 
-The genomic position maps to position 867 in coding region-based coordinates 
-and to triplet 289 in the protein. This is a non-synonymous coding variant 
-where the amino acid has changed from \Rcode{H} (His) to \Rcode{Q} (Gln).
+sustituted into the \Rcode{refCodon} \Rcode{CAC} to produce \Rcode{varCodon} 
+\Rcode{CAA}. The \Rcode{refCodon} is the sequence of codons necessary to make 
+the variant allele substitution and therefore often includes more nucleotides 
+than present in the range (i.e., 50301494, 50301494). Notice that it is the 
+third position in the \Rcode{refCodon} that has been substituted. This third 
+position in the codon, the position of substitution, corresponds to genomic 
+position 50301494. This genomic position maps to position 867 in coding 
+region-based coordinates and to triplet 289 in the protein. This is a 
+non-synonymous coding variant where the amino acid has changed from 
+\Rcode{H} (His) to \Rcode{Q} (Gln).
 
-When the resulting varSeq is not a multiple of 3 it cannot be translated. The
+When the resulting \Rcode{varCodon} is not a multiple of 3 it cannot be translated. The
 consequence is considered a \Rcode{frameshift} and \Robject{varAA} will be 
 missing. 
 
