port -r117412, filterVcf.Rmd single resource from AnnotationHub
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/VariantAnnotation@117487 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/filterVcf.Rnw
+++ b/vignettes/filterVcf.Rnw
@@ -230,7 +230,7 @@ in the intronic binding region of the cancer-related gene, EGFR.
 library(AnnotationHub)
 hub <- AnnotationHub()
 id <- names(query(hub, "wgEncodeUwTfbsMcf7CtcfStdPkRep1.narrowPeak"))
-mcf7.gr <- hub[[id]]
+mcf7.gr <- hub[[tail(id, 1)]]
 @ 
 
 \subsection{Find SNPs in CTCF Binding Regions}
